Fixed horizontal scrolling issue with mapboxgl-canvas-container

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -88,7 +88,7 @@ hr
     -webkit-transform translate3d(0, 0, 0)
     -moz-transform: translate3d(0, 0, 0)
     transform translate3d(0, 0, 0)
-    background-color: #FEF4E6
+    background-color: #111111
     z-index 0
     opacity 1
 
@@ -127,8 +127,8 @@ hr
         vertical-align 50%
 
 .mapboxgl-canvas-container
-    height: 100vh
-    width: 100vw
+    height 100vh
+    width 100%
 
 .static-mapbox-container
     position relative
